# m365-mcp

./: .coveragerc  .env.example  .env.http copy.example  .env.http.example  .env.stdio.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  ENV_FILE_USAGE.md  FILETREE.md  LAST_2_GIT_COMMITS_SUMMARY.md  MONITORING.md  ORIGIN_MASTER_9_COMMITS_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SQLCIPHER3.md  TODO.md  TOOLS.md  authenticate.py  change-name-must-do.md  example_mcp.json  mcp_user_experience_report.md  monitor_mcp_server.sh  pyproject.toml  pyrightconfig.json  start_mcp_with_monitoring.sh  test_mcp_endpoint.sh
.claude/: settings.local.json
.gait/: state.json
cache_update/: 00-ALIGNMENT-SUMMARY.md  01-overview.md  02-database-schema.md  03-cache-strategy.md  04-implementation.md  05-tool-integration.md  06-task-queue.md  07-implementation-plan.md  08-cache-warming.md  09-encryption-security.md  README.md
cache_update_v2/: 01-architecture-overview.md  02-database-schema.md  03-cache-strategy.md  04-cache-manager.md  05-encryption-security.md  06-cache-warming.md  07-background-tasks.md  08-tool-integration.md  09-implementation-plan.md  README.md  TODO.md
docs/: analysis_results.md  audit_remediation_phase_gates.md  audit_remediation_task_list.md  cache_examples.md  cache_security.md  cache_user_guide.md  m365_readonly_test_report.html  m365_readonly_test_report.md  m365_write_tool_test_plan.md
graphapi_update/: GRAPH_API_RESEARCH_ANSWERS.md  GRAPH_API_RESEARCH_QUESTIONS.md  MS_GRAPH_API_FIX.md  MS_GRAPH_API_TODO.md
individual_schema/: account_authenticate.schema.json  account_complete_auth.schema.json  account_list.schema.json  cache_get_stats.schema.json  cache_invalidate.schema.json  cache_task_enqueue.schema.json  cache_task_get_status.schema.json  cache_task_list.schema.json  cache_warming_status.schema.json  calendar_check_availability.schema.json  calendar_create_calendar.schema.json  calendar_create_event.schema.json  calendar_delete_calendar.schema.json  calendar_delete_event.schema.json  calendar_forward_event.schema.json  calendar_get_event.schema.json  calendar_get_free_busy.schema.json  calendar_list_calendars.schema.json  calendar_list_events.schema.json  calendar_propose_new_time.schema.json  calendar_respond_event.schema.json  calendar_update_event.schema.json  contact_add_to_list.schema.json  contact_create.schema.json  contact_create_list.schema.json  contact_delete.schema.json  contact_export.schema.json  contact_get.schema.json  contact_list.schema.json  contact_update.schema.json  email_add_category.schema.json  email_archive.schema.json  email_create_draft.schema.json  email_delete.schema.json  email_flag.schema.json  email_forward.schema.json  email_get.schema.json  email_get_attachment.schema.json  email_list.schema.json  email_mark_read.schema.json  (+12 more)
tests/: PORT_8000_CLEANUP.md  conftest.py  test_account_type.py  test_account_validation.py  test_background_worker.py  test_cache.py  test_cache_migration.py  test_cache_schema.py  test_cache_teardown_scaffolding.py  (+31 more)
(+146 files in other folders)
